fix menu on tablet

--- a/_sass/_includes/_header.scss
+++ b/_sass/_includes/_header.scss
@@ -258,7 +258,7 @@
 	padding: 32px 20px 12px;
 
 	@include mq(tabletp) {
-		padding: 30px 40px;
+		padding: 74px 40px 30px;
 	}
 
 	@include mq(tabletl) {
